--- a/app/views/admin/adminLiteratureBooks.ejs
+++ b/app/views/admin/adminLiteratureBooks.ejs
@@ -246,7 +246,7 @@
                                     <div class="form-group">
                                         <label class="col-sm-2 control-label">Quantity</label>
                                         <div class="col-sm-10">
-                                            <input type="number" class="form-control" id="updateQty" name="qty" value="" placeholder="Quantity" required="required" />
+                                            <input type="number" min="1" class="form-control" id="updateQty" name="qty" value="" placeholder="Quantity" required="required" />
                                         </div>
                                     </div>
                                   </div>
@@ -301,7 +301,7 @@
                                     <div class="form-group">
                                         <label class="col-sm-2 control-label">Quantity</label>
                                         <div class="col-sm-10">
-                                          <input type="number" class="form-control" name="qty" placeholder="Quantity" required="required" />
+                                          <input type="number" min="1" class="form-control" name="qty" placeholder="Quantity" required="required" />
                                         </div>
                                     </div>
                                   </div>
