--- a/app/views/user/userDashboard.ejs
+++ b/app/views/user/userDashboard.ejs
@@ -19,19 +19,19 @@
     <link href="/assets/css/font-awesome.min.css" rel="stylesheet" />
     <!-- full calendar css-->
     <link href="/assets/assets/fullcalendar/fullcalendar/bootstrap-fullcalendar.css" rel="stylesheet" />
-  <link href="/assets/assets/fullcalendar/fullcalendar/fullcalendar.css" rel="stylesheet" />
+    <link href="/assets/assets/fullcalendar/fullcalendar/fullcalendar.css" rel="stylesheet" />
     <!-- easy pie chart-->
     <link href="/assets/assets/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css" media="screen"/>
     <!-- owl carousel -->
     <link rel="stylesheet" href="/assets/css/owl.carousel.css" type="text/css">
-  <link href="/assets/css/jquery-jvectormap-1.2.2.css" rel="stylesheet">
+    <link href="/assets/css/jquery-jvectormap-1.2.2.css" rel="stylesheet">
     <!-- Custom styles -->
-  <link rel="stylesheet" href="/assets/css/fullcalendar.css">
-  <link href="/assets/css/widgets.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/fullcalendar.css">
+    <link href="/assets/css/widgets.css" rel="stylesheet">
     <link href="/assets/css/style.css" rel="stylesheet">
     <link href="/assets/css/style-responsive.css" rel="stylesheet" />
-  <link href="/assets/css/xcharts.min.css" rel=" stylesheet">
-  <link href="/assets/css/jquery-ui-1.10.4.min.css" rel="stylesheet">
+    <link href="/assets/css/xcharts.min.css" rel=" stylesheet">
+    <link href="/assets/css/jquery-ui-1.10.4.min.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -61,43 +61,12 @@
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
 
                             <i class="icon-bell-l"></i>
-                            <span class="badge bg-important">7</span>
+                            <span class="badge bg-important" id="notif-count"></span>
                         </a>
-                        <ul class="dropdown-menu extended notification">
+                        <ul class="dropdown-menu extended notification" id="notif-ul">
                             <div class="notify-arrow notify-arrow-blue"></div>
                             <li>
-                                <p class="blue">You have 4 new notifications</p>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-primary"><i class="icon_profile"></i></span>
-                                    Friend Request
-                                    <span class="small italic pull-right">5 mins</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-warning"><i class="icon_pin"></i></span>
-                                    John location.
-                                    <span class="small italic pull-right">50 mins</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-danger"><i class="icon_book_alt"></i></span>
-                                    Project 3 Completed.
-                                    <span class="small italic pull-right">1 hr</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-success"><i class="icon_like"></i></span>
-                                    Mick appreciated your work.
-                                    <span class="small italic pull-right"> Today</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">See all notifications</a>
+                                <p class="blue">Notifications</p>
                             </li>
                         </ul>
                     </li>
@@ -192,7 +161,7 @@
                 <a href="/dashboard/itbooks">
                   <div class="info-box blue-bg">
                     <i class="fa fa-book"></i>
-                    <div class="count">IT Books</div>
+                    <div class="count">Computer</div>
                   </div><!--/.info-box-->
                 </a>
               </div><!--/.col-->
