--- a/app/views/admin/adminBorrowerRequest.ejs
+++ b/app/views/admin/adminBorrowerRequest.ejs
@@ -55,43 +55,12 @@
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
 
                             <i class="icon-bell-l"></i>
-                            <span class="badge bg-important">7</span>
+                            <span class="badge bg-important" id="notif-count"></span>
                         </a>
-                        <ul class="dropdown-menu extended notification">
+                        <ul class="dropdown-menu extended notification" id="notif-ul">
                             <div class="notify-arrow notify-arrow-blue"></div>
                             <li>
-                                <p class="blue">You have 4 new notifications</p>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-primary"><i class="icon_profile"></i></span>
-                                    Friend Request
-                                    <span class="small italic pull-right">5 mins</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-warning"><i class="icon_pin"></i></span>
-                                    John location.
-                                    <span class="small italic pull-right">50 mins</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-danger"><i class="icon_book_alt"></i></span>
-                                    Project 3 Completed.
-                                    <span class="small italic pull-right">1 hr</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-success"><i class="icon_like"></i></span>
-                                    Mick appreciated your work.
-                                    <span class="small italic pull-right"> Today</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">See all notifications</a>
+                                <p class="blue">Notifications</p>
                             </li>
                         </ul>
                     </li>
@@ -126,7 +95,7 @@
               <div class="modal-content">
                   <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                      <h4 class="modal-title">Delete Borrower</h4>
+                      <h4 class="modal-title">Accept Borrower</h4>
                   </div>
                   <div class="modal-body">
                     <p id="accept-test"></p>
@@ -141,7 +110,7 @@
                     </div>
                     <div class="modal-footer">
                         <button data-dismiss="modal" class="btn btn-default" type="button">Close</button>
-                        <button class="btn btn-danger" type="submit">Continue</button>
+                        <button class="btn btn-success" type="submit">Continue</button>
                     </div>
                   </form>
               </div>
@@ -338,7 +307,7 @@
                     }
                 }
 
-                $('#accept-test').html("Accept book request from <i style=\"color: orange\"> " + username+ "<i> ?");
+                $('#accept-test').html("Accept book request from <i style=\"color: green\"> " + username+ "<i> ?");
             });
 
             $(".decline-btn").click(function (e) {
@@ -358,6 +327,30 @@
             });
 
         });
+    </script>
+
+    <script src="/primus/primus.io.js"></script>
+
+    <script>
+      $(document).ready(function() {
+          var primus = new Primus('http://localhost:4000/');
+
+          primus.on('notif', function (data) {
+            console.log(data);
+            var x = 0;
+            for(var i in data) {
+              x++;
+            }
+
+            $('#notif-ul').append('<li><a href="#"><span class="label label-success"><i class="icon_book_alt"></i></span> '+data.book+'<span class="small italic pull-right">1 hr</span></a></li>');
+            $('#notif-count').text(x);
+
+
+            // primus.send('my other event', { my: 'data' });
+          });
+
+
+      });
     </script>
 
   </body>
