--- a/app/views/user/userITBooks.ejs
+++ b/app/views/user/userITBooks.ejs
@@ -58,43 +58,12 @@
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
 
                             <i class="icon-bell-l"></i>
-                            <span class="badge bg-important">7</span>
+                            <span class="badge bg-important" id="notif-count"></span>
                         </a>
-                        <ul class="dropdown-menu extended notification">
+                        <ul class="dropdown-menu extended notification" id="notif-ul">
                             <div class="notify-arrow notify-arrow-blue"></div>
                             <li>
-                                <p class="blue">You have 4 new notifications</p>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-primary"><i class="icon_profile"></i></span>
-                                    Friend Request
-                                    <span class="small italic pull-right">5 mins</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-warning"><i class="icon_pin"></i></span>
-                                    John location.
-                                    <span class="small italic pull-right">50 mins</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-danger"><i class="icon_book_alt"></i></span>
-                                    Project 3 Completed.
-                                    <span class="small italic pull-right">1 hr</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="label label-success"><i class="icon_like"></i></span>
-                                    Mick appreciated your work.
-                                    <span class="small italic pull-right"> Today</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">See all notifications</a>
+                                <p class="blue">Notifications</p>
                             </li>
                         </ul>
                     </li>
@@ -253,10 +222,10 @@
       $(document).ready(function () {
           var primus = new Primus('http://localhost:4000/');
 
-          primus.on('news', function (data) {
-            console.log(data);
-            primus.send('my other event', { my: 'data' });
-          });
+          // primus.on('', function (data) {
+            // console.log(data);
+
+          // });
 
 
 
@@ -272,6 +241,7 @@
               children.replaceWith( '<button class="btn btn-alert" ><i class="icon_plus_alt2"></i><span> Request Sent</span></button>');
 
               $.post( host + "/admin/dashboard/borrowerrequest", { book_id: productId, user_id: userId } );
+              primus.send('admin-notif', { book: 'borrow request' });
               setTimeout(function() {
                 window.location.reload();
               }, 1000);
