--- a/app/views/admin/adminBorrowerRequest.ejs
+++ b/app/views/admin/adminBorrowerRequest.ejs
@@ -201,21 +201,10 @@
                 <h3 class="page-header"><i class="fa fa-laptop"></i> Dashboard</h3>
                 <ol class="breadcrumb">
                   <li><i class="fa fa-home"></i><a href="/admin">Home</a></li>
-                  <li><i class="fa fa-laptop"></i>Logs</li>
+                  <li><i class="fa fa-laptop"></i>Borrower Request</li>
                 </ol>
               </div>
 
-              <div class="col-lg-12">
-                <div class="panel">
-                  <div class="panel-body">
-                    Actions:
-                      &nbsp;&nbsp;&nbsp;
-                      <button class="btn btn-success">
-                        <a style="color:white" href="/print/printlogs" target="_blank"><i class="fa fa-print"> Print</i></a>
-                      </button>
-                  </div>
-                </div>
-              </div>
             </div>
 
             <div class="row">
