--- a/app/views/admin/adminBorrowers.ejs
+++ b/app/views/admin/adminBorrowers.ejs
@@ -147,7 +147,7 @@
                 <h3 class="page-header"><i class="fa fa-laptop"></i> Dashboard</h3>
                 <ol class="breadcrumb">
                   <li><i class="fa fa-home"></i><a href="/admin">Home</a></li>
-                  <li><i class="fa fa-laptop"></i>Logs</li>
+                  <li><i class="fa fa-laptop"></i>Borrowers</li>
                 </ol>
               </div>
 
