--- a/app/views/admin/adminLiteratureBooks.ejs
+++ b/app/views/admin/adminLiteratureBooks.ejs
@@ -310,9 +310,9 @@
                         <i class="fa fa-plus"> Add Book</i>
                       </button>
                       &nbsp;&nbsp;&nbsp;
-                      <button class="btn btn-success">
-                        <a style="color:white" href="/print/printliteraturebooks" target="_blank"><i class="fa fa-print"> Print</i></a>
-                      </button>
+                      <!-- <button > -->
+                        <a class="btn btn-success"style="color:white" href="/print/printliteraturebooks" target="_blank"><i class="fa fa-print"> Print</i></a>
+                      <!-- </button> -->
                   </div>
                 </div>
               </div>
