--- a/app/views/admin/adminBorrowerReserveList.ejs
+++ b/app/views/admin/adminBorrowerReserveList.ejs
@@ -109,6 +109,7 @@
                       </a>
                       <ul class="sub">
                           <li><a href="/admin/dashboard">Book Categories</a></li>
+                          <li><a href="/book/booklist">Book List</a></li>
                           <li><a href="/admin/dashboard/logs">Logs</a></li>
                           <li><a href="/admin/dashboard/borrowers">Borrowers</a></li>
                           <li><a href="/admin/dashboard/borrowerreservelist">Borrowers Reserved List</a></li>
@@ -124,10 +125,10 @@
                       </a>
                       <ul class="sub">
                           <li><a href="/admin/dashboard/itbooks">IT Books</a></li>
-                          <li><a href="/admin/dashboard/pyschbooks">Psychology Books</a></li>
-                          <li><a href="/admin/dashboard/religion">Religion Books</a></li>
-                          <li><a href="/admin/dashboard/literature">Literature Books</a></li>
-                          <li><a href="/admin/dashboard/history">History Books</a></li>
+                          <li><a href="/admin/dashboard/psychbooks">Psychology Books</a></li>
+                          <li><a href="/admin/dashboard/religionbooks">Religion Books</a></li>
+                          <li><a href="/admin/dashboard/literaturebooks">Literature Books</a></li>
+                          <li><a href="/admin/dashboard/historybooks">History Books</a></li>
                       </ul>
                   </li>
 
@@ -230,7 +231,7 @@
               x++;
             }
 
-            $('#notif-ul').append('<li><a href="#"><span class="label label-success"><i class="icon_book_alt"></i></span> '+data.book+'<span class="small italic pull-right">1 hr</span></a></li>');
+            $('#notif-ul').append('<li><a href="/admin/dashboard/borrowerrequest"><span class="label label-success"><i class="icon_book_alt"></i></span> '+data.book+'</a></li>');
             $('#notif-count').text(x);
 
 
@@ -239,7 +240,6 @@
 
 
       });
-    </script>
-
+  </script>
   </body>
 </html>
