--- a/app/views/admin/adminBorrowerProfile.ejs
+++ b/app/views/admin/adminBorrowerProfile.ejs
@@ -148,7 +148,7 @@
                   </div>
                   <div class="modal-body">
                     <p id="decline-test"></p>
-                      <form method="POST" action="/admin/dashboard/borrwerdecline">
+                      <form method="POST" action="/admin/dashboard/returnbook">
                           <div class="row">
                               <div class="large-12 columns">
                                   <label>
@@ -188,7 +188,7 @@
                       <th style="text-align: center">Request ID</th>
                       <th style="text-align: center">Title</th>
                       <th style="text-align: center">Author</th>
-                      <th style="text-align: center">Dute Date</th>
+                      <th style="text-align: center">Due Date</th>
                       <th style="text-align: center">Status</th>
                       <th style="text-align: center">Action</th>
                     </tr>
