--- a/app/views/user/userDashboard.ejs
+++ b/app/views/user/userDashboard.ejs
@@ -249,6 +249,7 @@
     <script src="/assets/js/sparklines.js"></script>
     <script src="/assets/js/charts.js"></script>
     <script src="/assets/js/jquery.slimscroll.min.js"></script>
+    <script src="/primus/primus.io.js"></script>
     <script>
 
           //knob
@@ -294,6 +295,22 @@
           }
         });
       });
+
+  </script>
+
+  <script>
+    $(document).ready(function() {
+          var primus = new Primus('http://localhost:4000/');
+
+          primus.on('open', function() {
+            primus.on('user-notif', function(data) {
+              console.log(data);
+
+              $('#notif-ul').append('<li><a href="/dashboard/reserved"><span class="label label-success"><i class="icon_book_alt"></i></span> '+data+'</a></li>');
+              $('#notif-count').text("1");
+            });
+          });
+    });
 
   </script>
 
