--- a/app/views/user/userLogin.ejs
+++ b/app/views/user/userLogin.ejs
@@ -31,6 +31,15 @@
 
   <body class="">
 
+    <% for (var i in messages ) {%>
+        <div class="alert alert-block alert-danger fade in">
+            <button data-dismiss="alert" class="close close-sm" type="button">
+                  <i class="icon_close_alt2" style="font-size: 20px"></i>
+            </button>
+            <strong><%= messages[i] %></strong>
+        </div>
+    <% } %>
+
     <div class="container">
 
       <form class="login-form" method="POST" action="/login">
@@ -52,5 +61,16 @@
     </div>
 
 
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <!-- nice scroll -->
+    <script src="/assets/js/jquery.scrollTo.min.js"></script>
+    <script src="/assets/js/jquery.nicescroll.js" type="text/javascript"></script>
+    <!-- gritter -->
+
+    <!-- custom gritter script for this page only-->
+    <script src="/assets/js/gritter.js" type="text/javascript"></script>
+    <!--custome script for all page-->
+    <script src="/assets/js/scripts.js"></script>
   </body>
 </html>
