--- a/app/views/user/userReservedBooks.ejs
+++ b/app/views/user/userReservedBooks.ejs
@@ -161,7 +161,7 @@
                         <th style="text-align: center">Title</th>
                         <th style="text-align: center">Author</th>
                         <th style="text-align: center">Start Date</th>
-                        <th style="text-align: center">Dute Date</th>
+                        <th style="text-align: center">Due Date</th>
                         <th style="text-align: center">Status</th>
                       </tr>
                     </thead>
@@ -245,6 +245,13 @@
                 window.location.reload();
               }, 1000);
           });
+
+          primus.on('user-notif', function(data) {
+              console.log(data);
+
+              $('#notif-ul').append('<li><a href="/dashboard/reserved"><span class="label label-success"><i class="icon_book_alt"></i></span> '+data+'</a></li>');
+              $('#notif-count').text("1");
+            });
       });
     </script>
   </body>
