--- a/app/views/user/userPsychBooks.ejs
+++ b/app/views/user/userPsychBooks.ejs
@@ -218,39 +218,61 @@
     <script type="text/javascript" src="/lib/datatable/media/js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="/assets/js/datatable.js"></script>
     <script src="/primus/primus.io.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-          var primus = new Primus('http://localhost:4000/');
+    <script>
+      $(document).ready(function() {
+        var primus = new Primus('http://localhost:4000/');
 
-          primus.on('news', function (data) {
-            console.log(data);
-            primus.send('my other event', { my: 'data' });
-          });
+          // primus.on('', function (data) {
+            // console.log(data);
 
+          // });
 
+          primus.on('open', function() {
 
-          var userId = $('#userId').val();
-          var children = "";
-          var host = window.location.origin;
-          $(".request-btn").click(function () {
-              var productId = $(this).attr("id");
-              console.log(productId);
-              console.log(userId);
-              children = $(this);
-              console.log(children);
-              children.replaceWith( '<button class="btn btn-alert" ><i class="icon_plus_alt2"></i><span> Request Sent</span></button>');
+            var userId = $('#userId').val();
+            var children = "";
+            var host = window.location.origin;
+            $(".request-btn").click(function () {
+                var productId = $(this).attr("id");
+                console.log(productId);
+                console.log(userId);
+                children = $(this);
+                console.log(children);
+                children.replaceWith( '<button class="btn btn-alert" ><i class="icon_plus_alt2"></i><span> Request Sent</span></button>');
 
-              $.post( host + "/admin/dashboard/borrowerrequest", { book_id: productId, user_id: userId } );
-              setTimeout(function() {
-                window.location.reload();
-              }, 1000);
-          });
+                $.post( host + "/admin/dashboard/borrowerrequest", { book_id: productId, user_id: userId } );
 
-          primus.on('user-notif', function(data) {
-            console.log(data);
+                // ****** socket ********
+                primus.send('admin-notif', { book: 'borrow request', userid: userId });
+                // primus.send('join', {data: userId});
+                // primus.send('user-notif', {data: 'accedted reqtuest'});
+                setTimeout(function() {
+                  window.location.reload();
+                }, 1000);
+            });
 
-            $('#notif-ul').append('<li><a href="/dashboard/reserved"><span class="label label-success"><i class="icon_book_alt"></i></span> '+data+'</a></li>');
-            $('#notif-count').text("1");
+            primus.on('user-notif', function(data) {
+              console.log(data);
+
+              switch(data) {
+                case "request accepted":
+                    console.log("**** CLIENT ACCEPT *******");
+                    $('#notif-ul').append('<li><a href="/dashboard/reserved"><span class="label label-success"><i class="icon_book_alt"></i></span> '+data+'</a></li>');
+                    $('#notif-count').text("1");
+                break;
+
+                case "request declined":
+                    console.log("**** CLIENT DECLINE *******");
+                    $('#notif-ul').append('<li><a href="/"><span class="label label-danger"><i class="icon_book_alt"></i></span> '+data+'</a></li>');
+                    $('#notif-count').text("1");
+                break;
+
+                default:
+                break;
+
+              }
+
+            });
           });
       });
     </script>
